# homeassistant-greenchoice

./: .gitignore  README.md  get-overeenkomst.py  pyproject.toml
custom_components/greenchoice/: api.py  auth.py  manifest.json  model.py  sensor.py  util.py
tests/: conftest.py  test_api.py
tests/test_data/: test_contract.json  test_init.json  test_meters.json  test_meters_v2.json  test_preferences.json  test_profiles.json  test_tariffs_v1.json
