[tool.poetry]
name = "homeassistant-greenchoice"
version = "2.0.0"
description = ""
authors = ["Baris Demirdelen <barisdemirdelen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
homeassistant = "^2022.5.2"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
mypy = "^0.942"
flake8 = "^4.0.1"
pylint = "^2.13.5"
bandit = "^1.7.4"
safety = "^1.10.3"
black = "^22.3.0"
pytest-mock = "^3.7.0"
types-requests = "^2.27.25"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
