[tool.poetry]
name = "homeassistant-greenchoice"
version = "2.0.1"
description = ""
authors = ["Baris Demirdelen <barisdemirdelen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
homeassistant = "^2023.9.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"
pytest-cov = "*"
mypy = "*"
flake8 = "*"
pylint = "*"
bandit = "*"
safety = "*"
black = "*"
pytest-mock = "*"
types-requests = "*"
requests-mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
