[tool.poetry]
name = "homeassistant-greenchoice"
version = "2.1.0"
description = ""
authors = ["Baris Demirdelen <barisdemirdelen@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
homeassistant = ">=2024.8.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"
pytest-cov = "*"
mypy = "*"
flake8 = "*"
pylint = "*"
bandit = "*"
safety = "*"
black = "*"
pytest-mock = "*"
types-requests = "*"
requests-mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
